# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  json.cast  plain.cast  pyproject.toml  stylish.cast
.github/workflows/: cli.yml  main.yml
gendiff/: __init__.py  base_diff.py  creating_diff.py  files.py  frame.py  gendiff.py  generate_diff.py  generate_difference.py  parse.py  parse_data.py
gendiff/formaters/: __init__.py  constants.py  json.py  plain.py  stylish.py
gendiff/formatters/: converter.py  json.py  json_formatter.py  plain.py  stylish.py  utils.py
gendiff/scripts/: cli.py  find_diff.py  gendiff.py  generate_diff.py  parser.py
gendiff/tests/: test_flat.py  test_tool.py  test_tree.py
gendiff/tests/fixtures/: fixrures.py  result_plain_json.txt  result_plain_mix.txt  result_plain_yaml.txt  result_tree_json.txt  result_tree_json_format.txt  result_tree_mix.txt  result_tree_plain_json.txt  result_tree_yaml.txt
gendiff_code/: __init__.py  diff_builder.py  gendiff.py  generate_diff.py
gendiff_code/formatters/: stylish.py
tests/: test_gendiff.py  test_json_comparison.py  test_test.py
tests/fixtures/: expected_json_json.json  expected_json_yaml.json  expected_plain_json.txt  expected_plain_yaml.txt  expected_stylish_json.txt  expected_stylish_yaml.txt  file1.yml  file2.json  file2.yml  flat_file2.json  nested_yml_result.txt  nested_yml_result_json.txt  result_flat.txt
